# web/src/api/openapi.json
@@ -2754,6 +2754,10 @@
             ],
             "title": "End Date"
           },
+          "has_history": {
+            "title": "Has History",
+            "type": "boolean"
+          },
           "id": {
             "title": "Id",
             "type": "string"
@@ -2923,7 +2927,8 @@
           "is_active",
           "notes",
           "splits",
-          "next_entry"
+          "next_entry",
+          "has_history"
         ],
         "title": "RecurringItemOut",
         "type": "object"
